# simple_fastapi_sample

./: README.md  pyproject.toml
app/: configurations.py  main.py
app/routes/: __init__.py
app/routes/api/: __init__.py
app/routes/api/v1/: __init__.py  simple_api.py
