[tool.poetry]
name = "hr-suport-service"
version = "0.1.0"
description = ""
authors = ["Mikhail <max.PROGO@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.13"
fastapi = "0.115.8"
uvicorn = "0.34.0"
asyncpg = "0.30.0"
pydantic-settings = "^2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
